[package]
name = "orbtk_shell"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Window shell crate used by OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["shell", "window", "ui"]
edition = "2018"

[target.wasm32-unknown-unknown.dependencies]
stdweb = "0.4.20"
console_error_panic_hook = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.23",  default-features = false, features = ["ico"] }
spin_sleep = { version = "1.0", optional = true }
derive_more = { version = "0.99", optional = true, features = ["constructor"], default-features = false }

# orbclient
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git", optional = true }

# minifb dependencies
minifb = { version = "0.19", optional = true }

[target.'cfg(all(not(target_os = "redox"), not(target_arch = "wasm32")))'.dependencies]
sdl2 = { version = "0.34", features = ["bundled", "static-link", "raw-window-handle"], optional = true }

[dependencies]
lazy_static = "1.4.0"
raw-window-handle = "0.3"

# orbtk
orbtk_render = { path = "../render", version = "0.3.1-alpha4", default-features = false }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }

[features]
default = ["orbclient", "sdl2"]
orbraq = ["orbclient", "sdl2"]
miniraq = ["spin_sleep", "minifb", "orbtk_render/miniraq", "derive_more"]
log = []