[package]
name = "orbtk-theme"
version = "0.3.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Default theme of OrbTk."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["css", "theme", "styling", "ui"]
edition = "2018"

[dependencies]
orbtk-css-engine = "0.3.0-alpha1"
lazy_static = "1.4.0"