[package]
name = "orbtk-tree"
version = "0.3.0-alpha1"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Tree structure based on DCES."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ecs", "tree"]
edition = "2018"

[dependencies]
dces = "0.2"