[package]
name = "orbtk-tree"
version = "0.3.1-alpha3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Tree structure based on DCES."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ecs", "tree"]
edition = "2018"

[dependencies]
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }