[package]
name = "orbtk-utils"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Helper utils and traits for OrbTk."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["helpers", "utils", "traits", "ui"]
edition = "2018"