[package]
name = "orbtk-utils"
version = "0.3.1-alpha3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Helper utils and traits for OrbTk."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["helpers", "utils", "traits", "ui"]
edition = "2018"

[dependencies]
ron = "0.6"
serde = "1.0.106"