[package]
name = "orbtk-web-window"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "OrbTk window library for wasm."
repository = "https://gitlab.redox-os.org/redox-os/orbtk"
license = "MIT"
keywords = ["windowing", "wasm"]
edition = "2018"

[dependencies]
stdweb = "0.4.15"

