[package]
name = "orbtk-widgets"
version = "0.3.1-alpha3"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base OrbTk widget library."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "widgets"]
edition = "2018"

[dependencies]
dces = "0.3"
orbtk-api =  "0.3.1-alpha3" 
orbtk-shell = "0.3.1-alpha3" 
orbtk-theme = "0.3.1-alpha3" 
orbtk-render = "0.3.1-alpha3" 
orbtk-utils = "0.3.1-alpha3" 
orbtk-proc-macros = "../proc-macros"
rust_decimal = "1.7"
lazy_static = "1.4"
