[package]
name = "orbtk-widgets"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base OrbTk widget library."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "widgets"]
edition = "2018"

[dependencies]
rust_decimal = "1.7"
lazy_static = "1.4"

# orbtk
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
orbtk-api = { path = "../api", version = "0.3.1-alpha4" }
orbtk_shell = { path = "../shell/orbtk_shell", version = "0.3.1-alpha4" }
orbtk-theme = { path = "../theme", version = "0.3.1-alpha4" }
orbtk_render_raqote = { path = "../render/orbtk_render_raqote", version = "0.3.1-alpha4" }
orbtk-utils = { path = "../utils", version = "0.3.1-alpha4" }
orbtk-proc-macros = { version = "0.3.1-alpha4", path = "../proc-macros" }