[package]
name = "orbtk_widgets"
version = "0.3.1-alpha4"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
description = "Base OrbTk widget library."
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = ["ui", "widgets"]
edition = "2018"

[dependencies]
rust_decimal = "1.7"
lazy_static = "1.4"

# orbtk
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
orbtk_api = { path = "../api", version = "0.3.1-alpha4" }
orbtk_shell = { path = "../shell", version = "0.3.1-alpha4", default-features = false }
orbtk_theme = { path = "../theme", version = "0.3.1-alpha4" }
orbtk_render = { path = "../render", version = "0.3.1-alpha4" }
orbtk_utils = { path = "../utils", version = "0.3.1-alpha4" }
orbtk_proc-macros = { version = "0.3.1-alpha4", path = "../proc-macros" }

[features]
default = ["orbtk_shell/orbraq"]
orbraq = ["orbtk_shell/orbraq"]
miniraq = ["orbtk_shell/miniraq"]
glupath = ["orbtk_shell/glupath", "orbtk_render/glupath"]